# django-birthdays

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  README_1.md  pytest.ini  pytest.ini_  readme.sh  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_settings.py  tox.ini
.github/: .git-pr-release-template  ISSUE_TEMPLATE.md  PR_RELEASE_TEMPLATE.md.erb  dependabot.yml
.github/workflows/: codeql-analysis.yml  cr.yml  create-release.yml  distribute.yml-  history.yml  init.yml  master-pr.yml  pypi-publish.yml-  r.yml  release.yml  release.yml-  test.yml  workflow.yml
django_jp_birthday/: .travis.yml  CONTRIBUTING.rst  setup.cfg  setup.py  tox.ini
django_jp_birthday/docs/: Makefile  (+2 more)
docs/: conf.py  index.rst  installation.rst  jp_birthday.management.commands.rst  jp_birthday.management.rst  jp_birthday.rst  modules.rst  requirements.txt  usage.rst
h_tests/: test_init.py  test_models.py  test_models_run.py_
html/: .buildinfo  genindex.html  index.html  jp_birthday.html  objects.inv  search.html  searchindex.js
jp_birthday/: __init__.py  era.py  eras.py  fields.py  managers.py  models.py
main/: requirements.txt
tests/: __init__.py  manage.py  models.py  settings.py  test_base_birthday_model.py  test_commands.py  test_django_jp_birthday.py  test_eras.py  test_fields.py  test_flow.py  test_init.py  test_managers.py  test_models.py  test_models.py-  test_models.py_  test_performances.py  test_process_speed.py
(+10 files in other folders)
