[metadata]
name = django-jp-birthday
author = shimakaze-git
license = MIT
description = django-jp-birthday is a helper library to work with birthdays and ages in models.
url = https://github.com/shimakaze-git/django-jp-birthday
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
setup_requires = pytest-runner
install_requires = Django >= 2.1
include_package_data = True
tests_require =
    Django >= 2.1
    pytest == 4.5.0
    pytest-django == 3.4.7
    pytest-cov == 2.7.1

[options.extras_require]

[aliases]
test = pytest

[tool:pytest]
django_find_project = false
DJANGO_SETTINGS_MODULE = tests.settings
python_files = tests/test_*.py
norecursedirs =
    .git
    .tox
    .env
